--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ sudo: false
 cache:
   directories:
     - $HOME/.cache/build
-    - $HOME/.wine
+#    - $HOME/.wine
 
 before_install:
   - ./extra/prepare.sh
 
 script: ./extra/buildall.sh
+
+env:
+  global:
+    WINEARCH: win32 # better?
