more settings reset to default

--- a/extra/sfall/ddraw.ini
+++ b/extra/sfall/ddraw.ini
@@ -194,14 +194,14 @@ WorldMapEncounterRate=5
 ;The number of slots available in the locations list panel of the world map
 ;Set to 0 to leave unchanged. 17 is default.
 ;Setting this greater than 17 requires a replacement background FRM, or you'll get glitched graphics
-WorldMapSlots=21
+WorldMapSlots=0
 
 ;To start a new game somewhere other than artemple.map, uncomment the next line and set it to the map you want to load
 ;StartingMap=
 
 ;To change the 'FALLOUT II v1.02d' version string on the main menu, uncomment the next line
 ;You can use up to 2 %d's in this if you want to include Fallout's version number somewhere
-VersionString=FALLOUT II 1.02d  UP 1.02.31u1
+VersionString=FALLOUT II 1.02.31u1
 
 ;To use a config file other than fallout2.cfg, uncomment the next line and add the name of your new file
 ;ConfigFile=
@@ -442,7 +442,6 @@ SpeedInterfaceCounterAnims=0
 
 ;These lines allow you to control the karma FRMs displayed on the character screen
 ;Number of KarmaPoints should be 1 less than number of KarmaFRMs
-;KarmaFRMsCount=3
 ;KarmaFRMs=47,48,49
 ;KarmaPoints=-100,100
 
@@ -451,14 +450,14 @@ ScienceOnCritters=0
 
 ;Modify this value to change the player's speed of rotation on the inventory and character screens
 ;Default is 166
-;SpeedInventoryPCRotation=166
+SpeedInventoryPCRotation=166
 
 ;Modify the number of the extra interface boxes available to modders. (Default is 5, and the maximum is 95)
 BoxBarCount=5
 
 ;Uncomment to set the text colour of the extra interface boxes
 ;The line must contain the same number of digits as the value of BoxBarCount, each either a 0 for green or 1 for red
-;BoxBarColours=000000
+;BoxBarColours=00000
 
 ;Set to 1 to fix the bug that caused bonus HtH damage to not be applied correctly.
 BonusHtHDamageFix=1
@@ -489,7 +488,7 @@ NPCStage6Fix=1
 FastShotFix=1
 
 ;Set to 1 to boost the maximum number of script names from 1450 to 10000
-BoostScriptDialogLimit=1
+BoostScriptDialogLimit=0
 
 ;Allows you to edit the skill tables
 ;Point the next line at an ini file containing the replacement skill data
