--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,13 @@ env:
     - mpack_version=4.1.8
     - mods_dir=mods
     - mod_name=upu
+    - bin_dir=extra/bin
 
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
   file_glob: true
-  file: upu*.7z
+  file: upu*.zip
   skip_cleanup: true
   on:
     tags: true
