--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,16 @@ script:
 
 env:
   global:
-    - sfall_version=4.1.9.1
-    - mpack_version=4.1.9.1
-    - mods_dir=mods
-    - mod_name=upu
-    - bin_dir=extra/bin
-    - appearance_dir=appearance
-    - release_dir=release
-    - mods_dir=release/mods
+    - sfall_version: 4.1.9.1
+    - mpack_version: 4.1.9.1
+    - mods_dir: mods
+    - mod_name: upu
+    - bin_dir: extra/bin
+    - release_dir: release
+    - mods_dir: release/mods
+    - mpack_7z: mpack.7z
+    - WINEARCH: win32
+    - WINEDEBUG: -all
 
 deploy:
   provider: releases
