more missing vars

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,10 @@ env:
   global:
     - sfall_version: 4.1.9.1
     - mpack_version: 4.1.9.1
-    - mods_dir: mods
     - mod_name: upu
+    - extra_dir: extra
     - bin_dir: extra/bin
+    - appearance_dir: appearance
     - release_dir: release
     - mods_dir: release/mods
     - mpack_7z: mpack.7z
