--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,11 @@ deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
   file_glob: true
-  file: upu*.zip
+  file:
+    - upu*.zip
+    - upu*.dat
   skip_cleanup: true
   on:
     tags: true
     branch: master
+  draft: true
