--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ cache:
   directories:
     - $HOME/.cache/build
 
+addons:
+  apt:
+    update: true
+    packages:
+      - gcc
+      - moreutils
+      - p7zip
+      - wine-stable
+      - wine32
+
 before_install:
   - ./extra/prepare.sh
 
