missed some fixes

--- a/extra/publish/ddraw.ini
+++ b/extra/publish/ddraw.ini
@@ -4,4 +4,8 @@ AllowSoundForFloats=1
 [Misc]
 FemaleDialogMsgs=2
 OverrideArtCacheSize=1
+AIBestWeaponFix=1
+AIDrugUsePerfFix=1
 ExtraSaveSlots=1
+NPCStage6Fix=1
+StartGDialogFix=1
