innosetup instead of nsis: #39

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ env:
     - extra_dir: extra
     - bin_dir: extra/bin
     - release_dir: release
+    - trans_dir: translations
     - mods_dir: release/mods
     - mpack_7z: mpack.7z
     - WINEARCH: win32
@@ -46,6 +47,7 @@ deploy:
   file:
     - upu*.zip
     - upu*.dat
+    - upu*.exe
   skip_cleanup: true
   on:
     tags: true
