--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ addons:
 
 before_install:
   - ./extra/prepare.sh
+  - wget http://files.jrsoftware.org/is/5/innosetup-5.6.1.exe
+  - wineboot --update
+  - Xvfb :0 -screen 0 1024x768x16 &
+  - DISPLAY=:0.0 wine innosetup-5.6.1.exe /VERYSILENT /SUPPRESSMSGBOXES
 
 script:
   - ./extra/check_headers.sh
