--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ before_install:
   - wget http://files.jrsoftware.org/is/5/innosetup-5.6.1.exe
   - wineboot --update
   - Xvfb :0 -screen 0 1024x768x16 &
-  - DISPLAY=:0.0 wine innosetup-5.6.1.exe /VERYSILENT /SUPPRESSMSGBOXES
+  - DISPLAY=:0.0 wine innosetup-5.6.1.exe /VERYSILENT /SUPPRESSMSGBOXES /LOG="inno.log" || true
+  - cat inno.log
+  - false
 
 script:
   - ./extra/check_headers.sh
