--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ cache:
   directories:
     - $HOME/.cache/build
 
+    services:
+  - xvfb
+
 addons:
   apt:
     update: true
@@ -23,8 +26,9 @@ before_install:
   - ./extra/prepare.sh
   - wget http://files.jrsoftware.org/is/5/innosetup-5.6.1.exe
   - wineboot --update
-  - Xvfb :0 -screen 0 1024x768x16 &
-  - DISPLAY=:0.0 wine innosetup-5.6.1.exe /VERYSILENT /SUPPRESSMSGBOXES /LOG="inno.log" /SP- /NORESTART || true
+#  - Xvfb :0 -screen 0 1024x768x16 &
+  - wine innosetup-5.6.1.exe /VERYSILENT /SUPPRESSMSGBOXES /LOG="inno.log" /SP- /NORESTART || true
+#  - DISPLAY=:0.0 wine innosetup-5.6.1.exe /VERYSILENT /SUPPRESSMSGBOXES /LOG="inno.log" /SP- /NORESTART || true
   - cat inno.log
   - false
 
