--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-sudo: required
-language: java
+sudo: false
+language: minimal
 dist: bionic
-install: true
+
 services: xvfb
 addons:
   apt:
@@ -11,11 +11,6 @@ addons:
     - xvfb
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
 before_install:
   - wget http://files.jrsoftware.org/is/5/innosetup-5.6.1.exe
   - wineboot --update
