got to work now, got ot work

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,57 @@
 language: java
 dist: bionic
+sudo: false
 
-services: xvfb
+cache:
+  directories:
+    - $HOME/.cache/build
+
+services:
+  - xvfb
+
 addons:
   apt:
+    update: true
     packages:
-    - wine-stable
-    - wine32
-    - xvfb
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+      - crudini
+      - dos2unix
+      - gcc
+      - moreutils
+      - p7zip
+      - wine-stable
+      - wine32
+
 before_install:
-  - wget http://files.jrsoftware.org/is/5/innosetup-5.6.1.exe
-  - wineboot --update
-  - wine innosetup-5.6.1.exe /VERYSILENT /SUPPRESSMSGBOXES
+  - ./extra/prepare.sh
 
 script:
-  - echo "script"
-before_deploy:
-  - echo "before deploy"
+  - ./extra/check_headers.sh
+  - ./extra/buildall.sh
+  - ./extra/publish.sh
+
+env:
+  global:
+    - sfall_version: 4.2.2
+    - mpack_version: 4.2.2
+    - mod_name: upu
+    - extra_dir: extra
+    - bin_dir: extra/bin
+    - release_dir: release
+    - trans_dir: translations
+    - mods_dir: release/mods
+    - mpack_7z: mpack.7z
+    - WINEARCH: win32
+    - WINEDEBUG: -all
+
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file_glob: true
+  file:
+    - upu*.zip
+    - upu*.dat
+    - upu*.exe
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
