revert to old wine

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ addons:
       - gcc
       - moreutils
       - p7zip
+      - wine-stable
+      - wine32
 
 before_install:
   - ./extra/prepare.sh
