--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ addons:
 before_install:
   - ./extra/prepare.sh
   - wineboot
+  - cat ~/.wine/system.reg | grep -m 1 '#arch' | cut -d '=' -f2
   - /usr/lib/wine/wineserver32 -p
 
 after_success:
