--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,6 @@ addons:
 before_install:
   - ./extra/prepare.sh
   - wineboot
-  - ps axuww | grep wine
-  - wineserver -d2 -f
 
 after_success:
   - wineserver -k
@@ -46,8 +44,8 @@ env:
     - trans_dir: translations
     - mods_dir: release/mods
     - mpack_7z: mpack.7z
-#    - WINEARCH: win32
-#    - WINEDEBUG: -all
+   - WINEARCH: win32
+   - WINEDEBUG: -all
 
 deploy:
   provider: releases
