fixed AllowSoundForFloats section

--- a/extra/publish/ddraw.ini
+++ b/extra/publish/ddraw.ini
@@ -1,8 +1,8 @@
-[Main]
-AllowSoundForFloats=1
-
 [Misc]
 FemaleDialogMsgs=2
 OverrideArtCacheSize=1
 AIDrugUsePerfFix=1
 ExtraSaveSlots=1
+
+[Sound]
+AllowSoundForFloats=1
