--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 dist: bionic
-sudo: false
+os: linux
 
 cache:
   directories:
@@ -20,6 +20,10 @@ addons:
       - p7zip
       - wine-stable
       - wine32
+  artifacts:
+    paths:
+    - $(ls upu*.exe)
+    - $(ls upu*.zip)
 
 before_install:
   - ./extra/prepare.sh
@@ -49,19 +53,13 @@ env:
 
 deploy:
   provider: releases
-  api_key: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   file_glob: true
   file:
     - upu*.zip
     - upu*.dat
     - upu*.exe
-  skip_cleanup: true
+  cleanup: false
   on:
     tags: true
     branch: master
-
-addons:
-  artifacts:
-    paths:
-    - $(ls upu*.exe)
-    - $(ls upu*.zip)
