enabled StartGDialogFix by default. Moved AllowSoundForFloats into QoL and added some extra settings to it

--- a/extra/publish/ddraw.ini
+++ b/extra/publish/ddraw.ini
@@ -3,9 +3,7 @@ FemaleDialogMsgs=2
 OverrideArtCacheSize=1
 AIDrugUsePerfFix=1
 ExtraSaveSlots=1
-
-[Sound]
-AllowSoundForFloats=1
+StartGDialogFix=1
 
 [Scripts]
 IniConfigFolder=mods
