rearranged build scripts for gha, + some optimization for local builds

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,21 @@
 *.err
 *.exe
 *.log
+*.zip
+*.dat
+
+# used to build dat files
+file.list
+
+translations/*/text
+data/text/english/cuts_female
+
+release/ddraw.dll
+release/ddraw.ini
+release/sfall-mods.ini
+release/translations/
+mods/
+
 extra/bin/*
 !extra/bin/dat2.exe
 scripts_src/sfall
