--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Install packages
         run: |
+          sudo dpkg --add-architecture i386
+          sudo apt -qq update
           sudo apt-get install -qq -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc moreutils p7zip wine-stable wine32
           wineboot >/dev/null 2>&1
 
