--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,8 @@ jobs:
           sudo dpkg --add-architecture i386
           sudo apt -qq update
           sudo apt -qq remove parallel
-          sudo apt-get install -qq -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc moreutils p7zip wine-stable wine32 docker.io >/dev/null 2>&1
+          sudo apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc moreutils p7zip wine-stable wine32 docker.io
+          #sudo apt-get install -qq -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc moreutils p7zip wine-stable wine32 docker.io >/dev/null 2>&1
           wineboot >/dev/null 2>&1
 
       - name: Build and package
