--- a/release/f2_res.ini
+++ b/release/f2_res.ini
@@ -25,8 +25,8 @@ GRAPHICS_MODE=2
 SCALE_2X=0
 
 ; Set the Fullscreen resolution here.
-SCR_WIDTH=640
-SCR_HEIGHT=480
+SCR_WIDTH=1024
+SCR_HEIGHT=768
 
 ; Set the Fullscreen colours here.
 ; 8 for 8bit colour output (original)
@@ -45,7 +45,7 @@ WINDOWED=0
 WIN_DATA=0
 
 ; Hi-Res Patch data file and patch folder(Loaded after master.dat)
-f2_res_dat=f2_res.dat
+f2_res_dat=mods\f2_res.dat
 f2_res_patches=data\
 
 
