--- a/extra/package/ddraw.ini
+++ b/extra/package/ddraw.ini
@@ -4,6 +4,7 @@ ExtraSaveSlots=1
 FemaleDialogMsgs=2
 OverrideArtCacheSize=1
 StartGDialogFix=1
+UseFileSystemOverride=1
 
 [Scripts]
 IniConfigFolder=mods
