caravan fixes from https://github.com/BGforgeNet/Fallout2_Restoration_Project/issues/111

--- a/release/mods/upu.ini
+++ b/release/mods/upu.ini
@@ -3,3 +3,6 @@
 goris_quick_derobing=1
 ; Some critters (robots, various guards, etc) walk much slower than others. This speeds them up a bit. Just cosmetic.
 critters_walk_faster=1
+
+[ncr]
+repeatable_brahmin_drive=1
