--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Install packages
         run: |
+          set -xeu -o pipefail
           sudo dpkg --add-architecture i386
           sudo apt -qq update
           sudo apt -qq remove parallel
@@ -63,7 +64,6 @@ jobs:
         uses: actions/upload-artifact@v2
         if: "!startsWith(github.ref, 'refs/tags/')"
         with:
-          name: upu_russian_sound.dat
           path: upu*.dat
 
       - name: Release
