--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,7 @@ jobs:
           set -xeu -o pipefail
           sudo dpkg --add-architecture i386
           sudo apt -qq update
-          sudo apt -qq remove parallel
-          sudo apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc moreutils p7zip wine-stable wine32 >/dev/null 2>&1
+          sudo apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc p7zip wine-stable wine32 >/dev/null 2>&1
           wineboot >/dev/null 2>&1
 
       - name: Build and package
@@ -53,19 +52,12 @@ jobs:
           name: upu.zip
           path: upu*.zip
 
-      - name: Upload artifacts - dat
-        uses: actions/upload-artifact@v2
-        if: "!startsWith(github.ref, 'refs/tags/')"
-        with:
-          path: upu*.dat
-
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             upu*.zip
-            upu*.dat
             upu*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
