--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,8 @@ jobs:
           set -xeu -o pipefail
           sudo dpkg --add-architecture i386
           sudo apt -qq update
-          sudo apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc p7zip wine-stable wine32 >/dev/null 2>&1
-          wineboot >/dev/null 2>&1
+          sudo apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc p7zip wine-stable wine32 >/dev/null
+          wineboot
 
       - name: Build and package
         run: ./extra/full.sh
