--- a/extra/package/ddraw.ini
+++ b/extra/package/ddraw.ini
@@ -5,6 +5,7 @@ FemaleDialogMsgs=2
 OverrideArtCacheSize=1
 StartGDialogFix=1
 UseFileSystemOverride=1
+BoostScriptDialogLimit=1
 
 [Scripts]
 IniConfigFolder=mods
