--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -16,10 +16,13 @@ jobs:
         run: ./extra/tests.sh
 
       - name: Install packages
+        # The Github's Ubuntu images since 20211122.1 are broken
+        # https://github.com/actions/virtual-environments/issues/4589
         run: |
           set -xeu -o pipefail
           sudo dpkg --add-architecture i386
           sudo apt -qq update
+          sudo apt install -y --allow-downgrades libpcre2-8-0=10.34-7
           sudo apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc p7zip wine-stable wine32 >/dev/null
           wineboot
 
