--- a/release/mods/upu.ini
+++ b/release/mods/upu.ini
@@ -1,6 +1,8 @@
 [main]
-; quick de-robing for Goris
-goris_quick_derobing=1
+; Quick de-robing for Goris, FPS
+; Accepted range for setting is 16-100, or 0 (disabled). The original value is 16.
+; This setting has no effect if alternative low FPS Goris de-robing is installed
+goris_derobing_speed=50
 
 [ncr]
 repeatable_brahmin_drive=1
