clarification for settings

--- a/release/mods/upu.ini
+++ b/release/mods/upu.ini
@@ -1,8 +1,9 @@
 [main]
-; Quick de-robing for Goris, FPS
+; Quick de-robing for Goris, FPS.
 ; Accepted range for setting is 16-100, or 0 (disabled). The original value is 16.
-; This setting has no effect if alternative low FPS Goris de-robing is installed
+; This setting has no effect if alternative low FPS Goris de-robing is installed.
 goris_derobing_speed=50
 
 [ncr]
+; If enabled, NCR => Redding brahmin drive will be repeatable like Duppo says. But if Hal dies, drives end.
 repeatable_brahmin_drive=1
