--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: devopsx/gha-focal-i386-fix
+      - uses: devopsx/gha-focal-i386-fix@master
       - uses: actions/checkout@v2
 
       - name: Run tests
