--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: build
 
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - 'data/text/**'
+    tags:
+    - '*'
 
 env:
   sfall_version: 4.3.4
