don't know why it doesn't build, and don't like it

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,6 @@
 name: build
 
-on:
-  push:
-    paths-ignore:
-      - 'data/text/**'
-    tags:
-    - '*'
+on: [push]
 
 env:
   sfall_version: 4.3.4
