--- a/release/mods/upu.ini
+++ b/release/mods/upu.ini
@@ -4,6 +4,13 @@
 ; This setting has no effect if alternative low FPS Goris de-robing is installed.
 goris_derobing_speed=50
 
+; Wipe merchant inventories before restock.
+; If disabled, all merchants will keep all items you ever sold to them forever (in addition to stock refreshements).
+; If enabled, they will get fresh inventory on each restock.
+; Does not affect quest items, they are always kept.
+; Can be toggled midgame.
+wipe_inventory=0
+
 [ncr]
 ; If enabled, NCR => Redding brahmin drive will be repeatable like Duppo says. But if Hal dies, drives end.
 repeatable_brahmin_drive=1
