--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    if: github.actor != bgforge-hive
+    if: ${{ github.actor != 'bgforge-hive' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
