--- a/release/f2_res.ini
+++ b/release/f2_res.ini
@@ -1,5 +1,5 @@
-;The F2_RES Configuration file    08/03/2014
-;A High Resolution Mod For Fallout 2 
+;The F2_RES Configuration file    12/12/2013
+;A High Resolution Mod For Fallout 2
 ;
 ;Comments start with ;  anything on a line after a comment is not visible to program
 
@@ -7,7 +7,7 @@
 ;##################################################################################################################
 [MAIN]
 
-; Affects Windows Vista/7/8 and above. Allows hi-res patch settings to be changed without admin privileges 
+; Affects Windows Vista/7/8 and above. Allows hi-res patch settings to be changed without admin privileges
 ; if installed in the "Program Files" directory.
 ; When UAC_AWARE=0 the hi-res patches settings will be stored in the game folder as usual.
 ; When UAC_AWARE=1 the hi-res patches settings will be stored in the users roaming app data folder.
@@ -15,9 +15,9 @@
 ; For Windows 7/8 this is usually "C:\Users\'your user name'\AppData\Roaming\Fallout2".
 UAC_AWARE=0
 
-; Set GRAPHICS_MODE=0 to enable Basic mode which supports resolution change only(required for sfalls Graphic modes). 
-; Set GRAPHICS_MODE=1 to enable Direct Draw 7 mode. 
-; Set GRAPHICS_MODE=2 to enable DirectX9 mode. 
+; Set GRAPHICS_MODE=0 to enable Basic mode which supports resolution change only (required for sfalls Graphic modes).
+; Set GRAPHICS_MODE=1 to enable DirectDraw 7 mode.
+; Set GRAPHICS_MODE=2 to enable DirectX 9 mode.
 GRAPHICS_MODE=2
 
 ; Set SCALE_2X=1 to scale the game x2.
@@ -34,17 +34,20 @@ SCR_HEIGHT=768
 ; 32 for 32bit colour output (set only if your not using Sfall with graphics modes 4 or 5)
 COLOUR_BITS=32
 
-; Set the Fullscreen refresh rate here. 
+; Set the Fullscreen refresh rate here.
 ; Set REFRESH_RATE=0 for driver default.
 REFRESH_RATE=0
 
-; Set WINDOWED=1 to enable windowed mode. 
+; Set WINDOWED=1 to enable windowed mode.
 WINDOWED=0
+
+; Set WINDOWED_FULLSCREEN=1 to play Fallout in a borderless fullscreen top level window (requires WINDOWED=1).
+WINDOWED_FULLSCREEN=0
 
 ; Window size and position data, Do not modify.
 WIN_DATA=0
 
-; Hi-Res Patch data file and patch folder(Loaded after master.dat)
+; Hi-Res Patch data file and patch folder (Loaded after master.dat)
 f2_res_dat=mods\f2_res.dat
 f2_res_patches=data\
 
@@ -174,7 +177,6 @@ USE_HIRES_IMAGES=1
 ; if set to 1 - menu-buttons, text & text-background are scaled up for better visibility when using hi-res graphics.
 SCALE_BUTTONS_AND_TEXT_MENU=0
 
-
 ; When using a hi-res background, MENU_BG_OFFSET_X & MENU_BG_OFFSET_Y equal the
 ; distances in pixels from the top button to Menu Background Graphic edges.
 ; For Fallout1 in Fallout2 engine mod, when using graphics from the Fallout1 Hi-Res patch.
@@ -215,7 +217,7 @@ DIALOG_SCRN_ART_FIX=1
 ; Increases the length of time the Splash screen is displayed in seconds
 SPLASH_SCRN_TIME=0
 
-; Set to 1 to reduce CPU usage and heat generation by allowing the system to go idle. 
+; Set to 1 to reduce CPU usage and heat generation by allowing the system to go idle.
 ; This setting should not be enabled if Sfalls "ProcessorIdle" setting is also enabled as this will likly cause slowdowns.
 CPU_USAGE_FIX=0
 
@@ -226,6 +228,6 @@ BARTER_PC_INV_DROP_FIX=1
 FADE_TIME_MODIFIER=60
 
 ; Set to 1 to enable, recalculates fade time length each time a transitional fade occurs.
-; May be useful if the length of transitional fade effects seems to randomly change between game restarts.  
+; May be useful if the length of transitional fade effects seems to randomly change between game restarts.
 FADE_TIME_RECALCULATE_ON_FADE=0
 
