try to speed up build a little

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,12 @@ jobs:
       - name: Run tests
         run: ./extra/tests.sh
 
+      - uses: devopsx/gha-ubuntu-i386-fix@master
+
       - name: Install packages
         run: |
-          set -xeu -o pipefail
-          sudo dpkg --add-architecture i386
-          sudo apt -qq update
-          sudo apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc p7zip wine-stable wine32
-          wineboot
+          sudo DEBIAN_FRONTEND=noninteractive eatmydata apt-get install -o=Dpkg::Use-Pty=0 -y crudini dos2unix gcc p7zip
+          WINEARCH=win32 eatmydata wineboot
 
       - name: Build and package
         run: ./extra/full.sh
