Added missing setting to upu.ini
Changed the description of Glovz's ammo mod

--- a/release/mods/upu.ini
+++ b/release/mods/upu.ini
@@ -4,6 +4,10 @@
 ; This setting has no effect if alternative low FPS Goris de-robing is installed.
 goris_derobing_speed=50
 
+; Some critters (robots, various guards, etc) walk much slower than others. This speeds them up a bit. Just cosmetic.
+; This setting has no effect if alternative low FPS walk speed fix is installed.
+critters_walk_faster=1
+
 ; Wipe merchant inventories before restock.
 ; If disabled, all merchants will keep all items you ever sold to them forever (in addition to stock refreshements).
 ; If enabled, they will get fresh inventory on each restock.
