--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,5 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: ShellCheck
+        uses: ludeeus/action-shellcheck@master
+
       - name: Run tests
         run: ./extra/tests.sh
