--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,5 +12,11 @@ jobs:
       - name: ShellCheck
         uses: ludeeus/action-shellcheck@master
 
-      - name: Run tests
-        run: ./extra/tests.sh
+      - name: Fallout tests
+        uses: BGforgeNet/fallout-tests@master
+        with:
+          scripts_h: scripts_src/headers/scripts.h
+          scripts_lst: data/scripts/scripts.lst
+          scripts_dir: scripts_src
+          dialog_dir: data/text/english/dialog
+          worldmap_path: data/data/worldmap.txt
