--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ jobs:
         uses: ludeeus/action-shellcheck@master
 
       - name: Fallout tests
-        uses: BGforgeNet/fallout-tests@master
+        uses: BGforgeNet/fallout-tests@main
         with:
           scripts_h: scripts_src/headers/scripts.h
           scripts_lst: data/scripts/scripts.lst
