--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
           scripts_dir: scripts_src
           dialog_dir: data/text/english/dialog
           worldmap_path: data/data/worldmap.txt
+          worldmap_script_sets: 258,259
 
       - uses: devopsx/gha-ubuntu-i386-fix@master
 
