--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       - name: ShellCheck
         uses: ludeeus/action-shellcheck@master
 
-      - name: Run tests
-        run: ./extra/tests.sh
+#      - name: Run tests
+#        run: ./extra/tests.sh
 
       - uses: devopsx/gha-ubuntu-i386-fix@master
 
