only commit poify result on master, add poify test to PRs

--- a/.github/workflows/poify.yml
+++ b/.github/workflows/poify.yml
@@ -1,14 +1,13 @@
 name: Poify/Unpoify
 on:
   push:
-    paths:
-      - "data/text/**" # tra_dir
-  pull_request:
+    branches:
+      - master
     paths:
       - "data/text/**"
 
 jobs:
-  build:
+  msg2po:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
