--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,7 +20,7 @@ jobs:
           scripts_lst: data/scripts/scripts.lst
           scripts_dir: scripts_src
           dialog_dir: data/text/english/dialog
-          worldmap_path: data/data/worldmap.txt
+          worldmap_path: false
 
       - name: Poify/Unpoify test
         uses: BGforgeNet/msg2po@master
