renormalize vietnamese as cp1258

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@ data/text/swedish/**    working-tree-encoding=cp1252
 data/text/schinese/**   working-tree-encoding=cp936
 data/text/tchinese/**   working-tree-encoding=cp950
 data/text/ukrainian/**  working-tree-encoding=cp1251
+data/text/vietnamese/**     working-tree-encoding=cp1258
 
 data/ai.txt             linguist-language=ini
 data/aibdymsg.txt       linguist-language=ini
