--- a/.github/workflows/poify-test.yml
+++ b/.github/workflows/poify-test.yml
@@ -1,19 +1,25 @@
-name: Poify/Unpoify
+name: Poify/Unpoify test
 on:
   push:
-    branches:
+    branches-ignore:
       - master
+    paths:
+      - "data/text/**"
+  pull_request:
     paths:
       - "data/text/**"
 
 jobs:
-  build:
+  msg2po:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Poify/Unpoify
         uses: BGforgeNet/msg2po@master
         with:
           poify: true
           unpoify: true
-          single_commit: true
+          dir2msgstr: true
+          push: false
