Torrents: match RPU

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,15 +64,6 @@ jobs:
           name: upu.zip
           path: upu*.zip
 
-      # Create torrents
-      - name: Create torrents
-        uses: devopsx/action-torrent@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          files: |
-            upu*.exe
-            upu*.zip
-
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -83,3 +74,11 @@ jobs:
             torrents/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Create torrents
+      - name: Release torrents
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: devopsx/action-torrent@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          local: false
