--- a/.github/workflows/scanmsg.yml
+++ b/.github/workflows/scanmsg.yml
@@ -16,7 +16,7 @@ defaults:
 
 jobs:
   ScanMsg:
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - name: Clone
         uses: actions/checkout@v4
