Fixed incorrect max HP check in hcdoc.ssl
* it should compare party member's current hp to their max hp instead of
player's.

Set EXTRA_WIN_MSG_CHECKS=1 to avoid issues in combat on some systems.
Fixed typos in f2_res.ini.

--- a/release/f2_res.ini
+++ b/release/f2_res.ini
@@ -62,7 +62,7 @@ ALT_MOUSE_INPUT=0
 ; Set EXTRA_WIN_MSG_CHECKS=1 to prevent the "NOT RESPONDING" error that may occur in windowed mode.
 ; Adds extra windows message checks to several loops during combat and fade effects.
 ; This setting is always enabled if ALT_MOUSE_INPUT=1.
-EXTRA_WIN_MSG_CHECKS=0
+EXTRA_WIN_MSG_CHECKS=1
 
 ; Set SCROLLWHEEL_FOCUS_PRIMARY_MENU=1 for inventory, barter, loot screens etc. to make mouse wheel control default to the PC's item list unless the cursor is hovering over another list.
 SCROLLWHEEL_FOCUS_PRIMARY_MENU=1
@@ -109,8 +109,8 @@ IGNORE_MAP_EDGES=0
 IGNORE_PLAYER_SCROLL_LIMITS=1
 
 ;SCROLL DISTANCE FROM PLAYER
-;HALF_SCRN eqauls half the screen width when used by SCROLL_DIST_X.
-;HALF_SCRN eqauls half the screen height width when used by SCROLL_DIST_Y.
+;HALF_SCRN equals half the screen width when used by SCROLL_DIST_X.
+;HALF_SCRN equals half the screen height width when used by SCROLL_DIST_Y.
 SCROLL_DIST_X=HALF_SCRN ; ORIGINAL 480
 SCROLL_DIST_Y=HALF_SCRN ; ORIGINAL 400
 
@@ -154,7 +154,7 @@ ALTERNATE_AMMO_METRE=0
 
 ;ALTERNATE_AMMO_LIGHT and ALTERNATE_AMMO_DARK set the palette offsets of particular colours used when ALTERNATE_AMMO_METRE is set to 1.
 ;ALTERNATE_AMMO_LIGHT is the main colour, ALTERNATE_AMMO_DARK is the darker glow colour.
-;Some posible combinations to try are:
+;Some possible combinations to try are:
 ;    green  - light 0xC4, dark 0x4B
 ;    yellow - light 0x3A, dark 0x42
 ;    orange - light 0x91, dark 0x9A
