--- a/release/mods/upu.ini
+++ b/release/mods/upu.ini
@@ -15,6 +15,11 @@ critters_walk_faster=1
 ; Can be toggled midgame.
 wipe_inventory=0
 
+; Changes random encounter cavern spawn logic to produce a more "sane" number of mobs.
+; Instead of spawning a group of the same size in every "area" of the map, it leaves roughly half of the areas empty.
+; Can be toggled midgame.
+caverns_reduce_mobs=0
+
 [ncr]
 ; If enabled, NCR => Redding brahmin drive will be repeatable like Duppo says. But if Hal dies, drives end.
 repeatable_brahmin_drive=1
